classicYouTubeDesign.css
/* ... */
ytd-guide-entry-renderer yt-img-shadow.ytd-guide-entry-renderer {
    width: 20px;
    height: 20px;
    border-radius: 0%;
}
ytd-guide-entry-renderer yt-img-shadow.ytd-guide-entry-renderer img.yt-img-shadow {
    width: 20px;
    height: 20px;
}
ytd-guide-entry-renderer yt-img-shadow {
    margin-right: 12px !important;
}
#footer {
    color: rgb(51, 51, 51);
}
#footer #guide-links-secondary a {
    font-size: 11px;
    color: rgb(102, 102, 102);
}
#footer a:hover {
    color: #167ac6 !important;
    text-decoration: underline;
}
#footer #vat-notice > div,
#footer #copyright > div {
    font-weight: 400;
    font-size: 11px;
    color: rgb(102, 102, 102);
}

/* Left bar mini */
ytd-mini-guide-renderer.ytd-app {
    top: var(--ytd-masthead-height, 50px);
    border-right: 1px solid #e8e8e8;
}


/* 
===================
    Main page 
===================
*/

/* Margin from top navbar */
html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app {
    margin-top: var(--ytd-masthead-height, 50px)
}
ytd-rich-grid-renderer {
    background-color: var(--yt-spec-brand-background-primary);
    box-shadow: 0 1px 2px rgba(0,0,0,.1);
    margin: 2% auto;
    padding: 0px 8px 15px 18px;
    width: 226px;
    box-sizing: border-box;
}
@media only screen and (min-width: 550px) {
    ytd-rich-grid-renderer {
        width: 438px;
    }
}
@media only screen and (min-width: 700px) {
    ytd-rich-grid-renderer {
        width: 644px;
    }
}
@media only screen and (min-width: 1175px) {
    ytd-rich-grid-renderer {
        width: 1056px;
    }
}
@media only screen and (min-width: 1575px) {
    ytd-rich-grid-renderer {
        width: 1262px;
    }
}
#grid-header.ytd-rich-grid-renderer,
#rich-shelf-header.ytd-rich-shelf-renderer {
    margin: 15px 0px 10px 0px;
}
#title.ytd-rich-grid-renderer,
#title.ytd-rich-shelf-renderer,
html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-browse.style-scope.ytd-page-manager ytd-two-column-browse-results-renderer.style-scope.ytd-browse.grid-6-columns div#primary.style-scope.ytd-two-column-browse-results-renderer ytd-rich-grid-renderer.style-scope.ytd-two-column-browse-results-renderer div#contents.style-scope.ytd-rich-grid-renderer ytd-rich-section-renderer.style-scope.ytd-rich-grid-renderer div#content.style-scope.ytd-rich-section-renderer ytd-rich-shelf-renderer.style-scope.ytd-rich-section-renderer div#dismissable.style-scope.ytd-rich-shelf-renderer div#rich-shelf-header.style-scope.ytd-rich-shelf-renderer {
    margin: 0px;
    padding: 0px;
    color: var(--yt-spec-text-primary);
    font-size: 15px;
    line-height: 20px;
    font-weight: 500;
}
html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-browse.style-scope.ytd-page-manager ytd-two-column-browse-results-renderer.style-scope.ytd-browse.grid-6-columns div#primary.style-scope.ytd-two-column-browse-results-renderer ytd-rich-grid-renderer.style-scope.ytd-two-column-browse-results-renderer div#contents.style-scope.ytd-rich-grid-renderer ytd-rich-section-renderer.style-scope.ytd-rich-grid-renderer div#content.style-scope.ytd-rich-section-renderer ytd-rich-shelf-renderer.style-scope.ytd-rich-section-renderer div#dismissable.style-scope.ytd-rich-shelf-renderer div#rich-shelf-header.style-scope.ytd-rich-shelf-renderer h2.style-scope.ytd-rich-shelf-renderer {
    padding-bottom: 10px;
}
/* X button for category */
#contents.ytd-rich-grid-renderer {
    margin-top: 0px;
}
html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-browse.style-scope.ytd-page-manager ytd-two-column-browse-results-renderer.style-scope.ytd-browse.grid-6-columns div#primary.style-scope.ytd-two-column-browse-results-renderer ytd-rich-grid-renderer.style-scope.ytd-two-column-browse-results-renderer div#contents.style-scope.ytd-rich-grid-renderer ytd-rich-section-renderer.style-scope.ytd-rich-grid-renderer div#content.style-scope.ytd-rich-section-renderer ytd-rich-shelf-renderer.style-scope.ytd-rich-section-renderer div#dismissable.style-scope.ytd-rich-shelf-renderer div#rich-shelf-header.style-scope.ytd-rich-shelf-renderer div#menu.style-scope.ytd-rich-shelf-renderer ytd-menu-renderer.style-scope.ytd-rich-shelf-renderer div#top-level-buttons.style-scope.ytd-menu-renderer ytd-button-renderer.style-scope.ytd-menu-renderer.style-opacity.size-default a.yt-simple-endpoint.style-scope.ytd-button-renderer yt-icon-button#button.style-scope.ytd-button-renderer.style-opacity.size-default {
    padding: 0px;
}
html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-browse.style-scope.ytd-page-manager ytd-two-column-browse-results-renderer.style-scope.ytd-browse.grid-6-columns div#primary.style-scope.ytd-two-column-browse-results-renderer ytd-rich-grid-renderer.style-scope.ytd-two-column-browse-results-renderer div#contents.style-scope.ytd-rich-grid-renderer ytd-rich-section-renderer.style-scope.ytd-rich-grid-renderer div#content.style-scope.ytd-rich-section-renderer ytd-rich-shelf-renderer.style-scope.ytd-rich-section-renderer div#dismissable.style-scope.ytd-rich-shelf-renderer div#rich-shelf-header.style-scope.ytd-rich-shelf-renderer {
    --yt-button-icon-size: 20px;
}
html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-browse.style-scope.ytd-page-manager ytd-two-column-browse-results-renderer.style-scope.ytd-browse.grid-4-columns div#primary.style-scope.ytd-two-column-browse-results-renderer ytd-rich-grid-renderer.style-scope.ytd-two-column-browse-results-renderer div#contents.style-scope.ytd-rich-grid-renderer {
    margin-top: 0px;
}
#contents.ytd-rich-grid-renderer, #grid-header.ytd-rich-grid-renderer {
    width: 100%;
}
ytd-rich-shelf-renderer {
    border-top: 1px solid #e2e2e2;
}
/* ... */

